force-app/main/default/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Flux__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flux</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StatusCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebserviceType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WebserviceType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StatusCode__c</columns>
        <columns>Type__c</columns>
        <columns>WebserviceType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>